--- a/emacs.org
+++ b/emacs.org
@@ -2100,6 +2100,14 @@ prefix argument."
                     mu4e-hide-index-messages t
                     mu4e-view-show-addresses t)
 
+              (setq mu4e-headers-fields
+                    '( (:human-date    .   12)
+                       (:flags         .    6)
+                       (:maildir       .   22)
+                       (:mailing-list  .   10)
+                       (:from          .   22)
+                       (:subject       .   nil)))
+
               (require 'mu4e-contrib)
 
               (setq mu4e-html2text-command 'mu4e-shr2text
