--- a/emacs.org
+++ b/emacs.org
@@ -2098,7 +2098,8 @@ prefix argument."
                     mu4e-get-mail-command "true"
                     mu4e-update-interval 300
                     mu4e-hide-index-messages t
-                    mu4e-view-show-addresses t)
+                    mu4e-view-show-addresses t
+                    mu4e-headers-include-related t)
 
               (setq mu4e-headers-fields
                     '( (:human-date    .   12)
