--- a/emacs.org
+++ b/emacs.org
@@ -566,8 +566,6 @@ so much used to them that I can't get rid of them.
 
 (define-key my-keys-minor-mode-map (kbd "M-<") 'pop-to-mark-command)
 (define-key my-keys-minor-mode-map (kbd "C--") 'dabbrev-expand)
-(define-key my-keys-minor-mode-map (kbd "C-c c C-c") 'comment-region)
-(define-key my-keys-minor-mode-map (kbd "C-c c c") 'uncomment-region)
 (define-key my-keys-minor-mode-map (kbd "s-.") 'find-tag)
 (define-key my-keys-minor-mode-map (kbd "s-}") 'pop-tag-mark)
 
@@ -2206,4 +2204,27 @@ prefix argument."
     :init (progn
             (setq edit-server-new-frame nil)
             (edit-server-start)))
+#+end_src
+** comment/uncomment line
+
+#+begin_src emacs-lisp
+  (defun endless/comment-line-or-region (n)
+    "Comment or uncomment current line and leave point after it.
+  With positive prefix, apply to N lines including current one.
+  With negative prefix, apply to -N lines above.
+  If region is active, apply to active region instead."
+    (interactive "p")
+    (if (use-region-p)
+        (comment-or-uncomment-region
+         (region-beginning) (region-end))
+      (let ((range
+             (list (line-beginning-position)
+                   (goto-char (line-end-position n)))))
+        (comment-or-uncomment-region
+         (apply #'min range)
+         (apply #'max range)))
+      (forward-line 1)
+      (back-to-indentation)))
+
+  (define-key my-keys-minor-mode-map (kbd "C-c c C-c") 'endless/comment-line-or-region)
 #+end_src
