now using a less often used key chord for buffer switching

--- a/emacs.org
+++ b/emacs.org
@@ -1398,7 +1398,7 @@ similiar to the autocompletion provided by XCode.
    :init
    (key-chord-mode 1)
    (key-chord-define-global "uu" 'undo)
-   (key-chord-define-global "oo" 'switch-window)
+   (key-chord-define-global "yy" 'switch-window)
    (key-chord-define-global "jl" 'ace-jump-word-mode)
    (key-chord-define-global "jl" 'ace-jump-line-mode))
 
