--- a/emacs.org
+++ b/emacs.org
@@ -2030,7 +2030,8 @@ prefix argument."
       ("t" proced "proced")
       ("a" magit-status "magit-status")
       ("m" mu4e "mu4e")
-      ("p" sql-postgres "sql-postgres")))
+      ("p" sql-postgres "sql-postgres")
+      ("b" (compile (format "~/dev/blog_pub/blog.rb %s" (expand-file-name (buffer-file-name)))))))
 #+end_src
 
 ** =eshell= modifications
