--- a/emacs.org
+++ b/emacs.org
@@ -315,11 +315,13 @@ electric indentation.
     I'm using the Tomorrow theme in the eighties variant.
 
 #+begin_src emacs-lisp
-(custom-set-variables
- '(custom-enabled-themes (quote (sanityinc-tomorrow-eighties)))
- '(custom-safe-themes (quote ("628278136f88aa1a151bb2d6c8a86bf2b7631fbea5f0f76cba2a0079cd910f7d" default))))
+  (custom-set-variables
+   '(custom-enabled-themes (quote (sanityinc-tomorrow-eighties)))
+   '(custom-safe-themes    (quote ("3c83b3676d796422704082049fc38b6966bcad960f896669dfc21a7a37a748fa"
+                                   "628278136f88aa1a151bb2d6c8a86bf2b7631fbea5f0f76cba2a0079cd910f7d"
+                                   default))))
 
-(load-theme 'sanityinc-tomorrow-eighties t)
+  (load-theme 'sanityinc-tomorrow-eighties t)
 #+end_src
 
 ** Helpers
@@ -1842,8 +1844,7 @@ We want to be able to edit CMake files in a sane way.
 
     :config (progn
               (custom-set-variables
-               '(sml/hidden-modes (quote (" hl-p" " my-keys" " pair" " HRB" " AC" " GitGutter" " Flymake" " yas" " SP" " WS" " MRev")))
-               '(custom-safe-themes (quote ("6a37be365d1d95fad2f4d185e51928c789ef7a4ccf17e7ca13ad63a8bf5b922f" default))))
+               '(sml/hidden-modes (quote (" hl-p" " my-keys" " pair" " HRB" " AC" " GitGutter" " Flymake" " yas" " SP" " WS" " MRev"))))
 
               (add-to-list 'sml/replacer-regexp-list '("^~/\\(data/\\)?[Ss]ites/" ":WEB:"))
               (add-to-list 'sml/replacer-regexp-list '("^~/\\(data/\\)?dev/" ":DEV:"))
